--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
   </head>
 
   <body>
-    <div class="container w-75">
-      <%= yield %>
+    <div class="container w-75 p-3">
+      <%= link_to 'Home', root_path %>
     </div>
+      <%= yield %>
   </body>
 </html>
