--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @flat do |f| %>
+  <%= f.input :picture_url %>
   <%= f.input :name %>
   <%= f.input :address %>
    <%= f.input :description %>
