--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,29 +1,28 @@
-<h1>Flats</h1>
-<%# <p>Find me in app/views/flats/index.html.erb</p> %>
-<div class=" flat-card d-flex row gap-5 justify-content-between">
-  <% @flats.each do |flat| %>
-    <div class="card" style="width: 18rem;">
-      <img src="http://www.engelvoelkers.com/wp-content/uploads/2017/04/Luxury_apartments_Engel_Voelkers_USA_New_York_E-00235L.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><%= link_to flat.name, flat_path(id: flat.id) %></h5>
-        <p class="card-text">
-          <%= flat.address %>
-          <%= flat.price_per_night %>
-          <%= flat.number_of_guests %>
-        </p>
-        <%= link_to 'Delete', flat_path(id: flat.id), method: :delete, data: {:confirm => 'Are you sure?'}, class: "card-btn" %>
-      </div>
-    </div>
-  <% end %>
-
-</div>
-<%= link_to 'Add flat', new_flat_path %>
-
-<%# <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="container w-75">
+  <div class="d-flex justify-content-between align-items-center my-4">
+    <h1>Flats</h1>
+    <%= link_to 'Add flat', new_flat_path, class: "btn btn-primary"%>
   </div>
-</div> %>
+  <%# <p>Find me in app/views/flats/index.html.erb</p> %>
+  <div class=" flat-card d-flex row gap-5 justify-content-between">
+    <% @flats.each do |flat| %>
+      <div class="card" style="width: 18rem;">
+        <img src=<%= flat.picture_url %> class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"><%= link_to flat.name, flat_path(id: flat.id) %></h5>
+          <p class="card-text">
+            <%= flat.address %>
+          </p>
+          <p class="card-text">
+            $<%= flat.price_per_night %> per night
+          </p>
+            <p class="card-text">
+            <%= flat.number_of_guests %> person
+            </p>
+          <%= link_to 'Delete', flat_path(id: flat.id), method: :delete, data: {:confirm => 'Are you sure?'}, class: "card-btn" %>
+        </div>
+      </div>
+    <% end %>
+
+  </div>
+</div>
