--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,7 +1,17 @@
-<h1> <%= @flat.name %></h1>
-<p> <%= @flat.address %></p>
-<p> <%= @flat.description %></p>
-<p><strong><%=@flat.price_per_night%></strong></p>
-<p><strong><%=@flat.number_of_guests%></strong></p>
-<%= link_to 'Back to Lists', flats_path %>
-<%= link_to 'Edit', edit_flat_path(id: @flat.id) %>
+<img src=<%= @flat.picture_url%> class="banner-img"alt="">
+<div class=" container w-75 show-page my-4">
+  <div class="row">
+    <div class="col-7">
+      <h1> <%= @flat.name %></h1>
+      <p> <%= @flat.address %></p>
+      <p> <%= @flat.description %></p>
+      <p><strong>$<%=@flat.price_per_night%> per night</strong></p>
+      <p><strong><%=@flat.number_of_guests%> person</strong></p>
+      <%= link_to 'Back to Lists', flats_path %>
+      <%= link_to 'Edit', edit_flat_path(id: @flat.id) %>
+    </div>
+    <div class="col-5">
+      <img src="https://i0.wp.com/www.cssscript.com/wp-content/uploads/2018/03/Simple-Location-Picker.png?fit=561%2C421&ssl=1" class="map-img img-fluid" alt="">
+    </div>
+  </div>
+</div>
